--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,12 +55,16 @@ body {
   min-height: 100vh;
   line-height: 1.5;
   overflow-x: hidden;
-  max-width: 100vw;
 }
 
 main {
   max-width: 100%;
-  overflow: hidden;
+}
+
+@media (max-width: 580px) {
+  main {
+    overflow: hidden;
+  }
 }
 
 a {
